# rust/cloud-storage/comms/src/inbound/router.rs
@@ -35,7 +35,6 @@ pub fn comms_router<S: ChannelsService, T: Send + Sync + 'static>(
 ) -> Router<T> {
     Router::new()
         .route("/channels", get(get_channels_handler))
-        .route("/activity", get(get_activity_handler))
         .with_state(s)
 }
 
@@ -85,29 +84,6 @@ async fn get_channels_handler<S: ChannelsService>(
         .map_err(|_| CommsErr::Internal)?;
 
     Ok(Json(<Vec<ApiChannelWithLatest>>::mirror(res)))
-}
-
-#[tracing::instrument(skip(service))]
-#[utoipa::path(get,
-    tag = "activity",
-    operation_id = "get_activity",
-    path = "/activity", responses(
-    (status = 200, body=Vec<ApiActivity>),
-    (status = 401, body=String),
-    (status = 404, body=String),
-    (status = 500, body=String),
-))]
-pub async fn get_activity_handler<S: ChannelsService>(
-    State(service): State<CommsRouterState<S>>,
-    MacroUserExtractor { macro_user_id, .. }: MacroUserExtractor,
-) -> Result<Json<Vec<ApiActivity>>, CommsErr> {
-    let res = service
-        .inner
-        .get_activities(macro_user_id)
-        .await
-        .map_err(|_| CommsErr::Internal)?;
-
-    Ok(Json(<Vec<ApiActivity>>::mirror(res)))
 }
 
 #[derive(Debug, Clone, Copy, Serialize, ToSchema, Doppleganger)]
@@ -213,20 +189,4 @@ pub struct ChannelMessage {
     pub deleted_at: Option<chrono::DateTime<chrono::Utc>>,
     /// message mentions formatted as `{ENTITY_TYPE}:{ENTITY_ID}`
     pub mentions: Vec<String>,
-}
-
-#[derive(Debug, ToSchema, Doppleganger, Serialize)]
-#[dg(backward = models_comms::channel::Activity)]
-pub struct ApiActivity {
-    pub id: Uuid,
-    pub user_id: String,
-    #[schema(value_type = Uuid)]
-    pub channel_id: ChannelId,
-    pub created_at: chrono::DateTime<chrono::Utc>,
-    pub updated_at: chrono::DateTime<chrono::Utc>,
-    /// the last time the user viewed the channel
-    pub viewed_at: Option<chrono::DateTime<chrono::Utc>>,
-    /// the last time the user intereacted with the channel
-    /// eg. reacting, replying, sending a message
-    pub interacted_at: Option<chrono::DateTime<chrono::Utc>>,
 }
